[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastgradio"
version = "0.1.0"
description = "A Python web framework for ML inference with GPU/CPU resource decorators"
requires-python = ">=3.10"
dependencies = [
    "starlette>=0.27.0",
    "uvicorn[standard]>=0.20.0",
    "anyio>=3.0.0",
]

[project.optional-dependencies]
gpu = ["torch>=2.0.0"]
health = ["nvidia-ml-py>=12.0.0"]
all = ["torch>=2.0.0", "nvidia-ml-py>=12.0.0"]
